[gd_scene load_steps=25 format=3 uid="uid://byuh2f6phkubf"]

[ext_resource type="Texture2D" uid="uid://14ishurqjaf8" path="res://assets/graphics/spr_bart.png" id="1_vw4v1"]
[ext_resource type="Script" path="res://assets/scenes/secrets/objects/bart.gd" id="1_w7a71"]
[ext_resource type="AudioStream" uid="uid://nwemu3thulus" path="res://assets/sounds/sfxOw.ogg" id="3_fmc5v"]
[ext_resource type="Texture2D" uid="uid://bdinqk0o3eqno" path="res://assets/graphics/boom_strip17.png" id="3_jxbrl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6w6c"]
size = Vector2(40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h0kj"]
atlas = ExtResource("3_jxbrl")
region = Rect2(0, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcnsv"]
atlas = ExtResource("3_jxbrl")
region = Rect2(71, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssspr"]
atlas = ExtResource("3_jxbrl")
region = Rect2(142, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7ht0"]
atlas = ExtResource("3_jxbrl")
region = Rect2(213, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjndg"]
atlas = ExtResource("3_jxbrl")
region = Rect2(284, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3its"]
atlas = ExtResource("3_jxbrl")
region = Rect2(355, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn11j"]
atlas = ExtResource("3_jxbrl")
region = Rect2(426, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqu5"]
atlas = ExtResource("3_jxbrl")
region = Rect2(497, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tukd3"]
atlas = ExtResource("3_jxbrl")
region = Rect2(568, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3afqu"]
atlas = ExtResource("3_jxbrl")
region = Rect2(639, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd6sv"]
atlas = ExtResource("3_jxbrl")
region = Rect2(710, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf7xr"]
atlas = ExtResource("3_jxbrl")
region = Rect2(781, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv5d8"]
atlas = ExtResource("3_jxbrl")
region = Rect2(852, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfq0o"]
atlas = ExtResource("3_jxbrl")
region = Rect2(923, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_20qad"]
atlas = ExtResource("3_jxbrl")
region = Rect2(994, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmoh7"]
atlas = ExtResource("3_jxbrl")
region = Rect2(1065, 0, 71, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb3ex"]
atlas = ExtResource("3_jxbrl")
region = Rect2(1136, 0, 71, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3es0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcnsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssspr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7ht0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjndg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3its")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn11j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tukd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3afqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd6sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf7xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv5d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfq0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20qad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmoh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb3ex")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5np8"]
size = Vector2(26.6667, 60)

[node name="Bart" type="CharacterBody2D"]
collision_layer = 2
input_pickable = true
script = ExtResource("1_w7a71")

[node name="BartClickbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BartClickbox"]
shape = SubResource("RectangleShape2D_t6w6c")
debug_color = Color(0.843137, 0.368627, 0.266667, 0.419608)

[node name="spr_bart" type="Sprite2D" parent="."]
scale = Vector2(1, 0.933333)
texture = ExtResource("1_vw4v1")

[node name="spr_explode" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1.13687e-13, 4)
scale = Vector2(0.676056, 0.64)
sprite_frames = SubResource("SpriteFrames_o3es0")
frame = 16
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.57628e-07, -1.19209e-07)
scale = Vector2(0.6, 0.533333)
shape = SubResource("RectangleShape2D_w5np8")

[node name="Sounds" type="Node" parent="."]

[node name="sfxOw" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_fmc5v")

[connection signal="mouse_entered" from="BartClickbox" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BartClickbox" to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="spr_explode" to="." method="_on_spr_explode_animation_finished"]
